# OMA_ExamTimeTable

./: .gitignore  ADTgraph.c  ADTgraph.h  CMakeLists.txt  ConflictStructure.c  ConflictStructure.h  README.md  ST.c  ST.h  TabuList.c  TabuList.h  annealing.c  annealing.h  benchmarks-history.xlsx  benchmarks.xlsx  edge.c  edge.h  fileManager.c  fileManager.h  greedySlots.c  greedySlots.h  local.c  local.h  main.c  rng.h  utils.c  utils.h  verbose.h
BestSolution/: instance01_OMAMZ_group03.sol  instance02_OMAMZ_group03.sol  instance03_OMAMZ_group03.sol  instance04_OMAMZ_group03.sol  instance05_OMAMZ_group03.sol  instance06_OMAMZ_group03.sol  instance07_OMAMZ_group03.sol
Latex/: OMA_ETT-Model.tex
PowerPoint/: FlowChart.graffle  GapToTime2.xls  OMA-MZ_03-Presentation.pptx  benchmarks(version 1).xlsx  histogram(version 1).xlsx
instances/: instance01.exm  instance01.stu  instance02.exm  instance02.stu  instance03.exm  instance03.stu  instance04.exm  instance04.stu  instance05.exm  instance05.stu  instance06.exm  instance06.stu  instance07.exm  instance07.stu  instanceTest.exm  instanceTest.stu  instanceTest2.exm  instanceTest2.stu
report/: ETPreport_OMAMZ_group03.tex
